update consul config process

--- a/AnsibleWorkShop/runner/project/debug/Invoke-ConsulRequest.yml
+++ b/AnsibleWorkShop/runner/project/debug/Invoke-ConsulRequest.yml
@@ -11,6 +11,12 @@
 ---
 - hosts: localhost
   gather_facts: no
+  vars: 
+    service:
+      ID: dev-traefik
+      Name: dev-traefik
+      Port: 443
+      Tags:
   tasks:
     - name: consul service
       community.general.consul:
@@ -29,23 +35,38 @@
           - traefik.enable=true
       when: false
     
-    - name: consul service
+    - name: consul service register
       uri:
-        url: "https://192.168.255.12:8500/v1/agent/service/register"
+        url: "http://192.168.255.12:8500/v1/agent/service/register"
         validate_certs: false
         method: PUT # DELETE
         headers:
           X-Consul-Token: e95b599e-166e-7d80-08ad-aee76e7ddf19
         body_format: json
-        body: 
-          ID: dev-traefik
-          Name: dev-traefik
-          Port: 443
-          Tags:
+        body: "{{ service }}"
       when: false
 
+    - name: consul service deregister
+      uri:
+        url: "http://192.168.255.12:8500/v1/agent/service/deregister/{{ service.ID }}"
+        validate_certs: false
+        method: PUT # DELETE
+        headers:
+          X-Consul-Token: e95b599e-166e-7d80-08ad-aee76e7ddf19
+      vars:
+        id: dev-traefik
+      when: false
+
+    - name: consul policy
+      ansible.builtin.uri:
+        url: "http://192.168.255.12:8500/v1/v1/acl/policy"
+        headers:
+          X-Consul-Token: e95b599e-166e-7d80-08ad-aee76e7ddf19
+        body_format: json
+        body:
+
     - name: consul kv
-      when: true
+      when: false
       uri:
         url: "https://consul.infra.sololab/v1/kv/{{ item.key }}"
         validate_certs: false
@@ -69,12 +90,6 @@
             retry_join = [
               "consul.infra.sololab"
             ]
-            ports {
-              grpc  = 8502
-              http  = 8500
-              https = 8443
-              dns   = 8600
-            }
 
         - key: config/systemd
           value: |
