--- a/AnsibleWorkShop/runner/project/Update-ConsulConfig.yml
+++ b/AnsibleWorkShop/runner/project/Update-ConsulConfig.yml
@@ -2,9 +2,8 @@
 # cd "$(git rev-parse --show-toplevel)\AnsibleWorkShop\runner"
 # $private_data_dir = "/tmp/private"
 # podman run --rm --userns=keep-id `
-#   --dns 192.168.255.10 `
 #   -v ./:$private_data_dir `
-#   -e RUNNER_PLAYBOOK=./debug/Invoke-ConsulRequest.yml `
+#   -e RUNNER_PLAYBOOK=Update-ConsulConfig.yml `
 #   -e ANSIBLE_DISPLAY_SKIPPED_HOSTS=False `
 #   localhost/ansible-ee-aio-new `
 #   bash -c "ansible-runner run $private_data_dir -vv"
@@ -45,8 +44,7 @@
             - Name: DNS
 
     - name: consul kv
-      when: false
-      uri:
+      ansible.builtin.uri:
         url: "https://{{ Consul.app.fqdn }}/v1/kv/{{ item.key }}"
         validate_certs: false
         method: PUT # DELETE
@@ -63,6 +61,7 @@
                 default = "e95b599e-166e-7d80-08ad-aee76e7ddf19"
               }
             }
+            auto_reload_config = true
             bind_addr = "{{ GetInterfaceIP `eth0` }}"
             datacenter = "dc1"
             data_dir = "/home/podmgr/consul/data"
@@ -97,15 +96,17 @@
             #! /bin/bash
             mkdir -p /home/podmgr/consul/config/ /home/podmgr/consul/data/
 
-            /usr/bin/curl -s -H 'X-Consul-Token: "{{ Consul.app.token }}"' -X GET -k https://consul.infra.sololab/v1/kv/config/client | \
+            /usr/bin/curl -s -H "X-Consul-Token: {{ Consul.app.token }}" -X GET -k https://consul.infra.sololab/v1/kv/config/client | \
               jq -r .[0].Value | \
               base64 --decode > /home/podmgr/consul/config/consul.hcl
 
-            /usr/bin/curl -s -H 'X-Consul-Token: "{{ Consul.app.token }}"' \
+            /usr/bin/curl -s -H "X-Consul-Token: {{ Consul.app.token }}" \
               -X GET -k https://consul.infra.sololab/v1/kv/config/systemd | \
               jq -r .[0].Value | \
               base64 --decode > /home/podmgr/.config/systemd/user/consul.service
 
             systemctl daemon-reload --user
-
+            systemctl unmask consul --user
             systemctl enable --now --user consul
+            systemctl reload consul --user 
+
