terraform-alicloud-eci: update cockpit

--- a/TerraformWorkShop/Alicloud/ECI-Cockpit/cockpit.conf
+++ b/TerraformWorkShop/Alicloud/ECI-Cockpit/cockpit.conf
@@ -2,6 +2,7 @@
 ProtocolHeader = X-Forwarded-Proto
 LoginTitle = Cockpit Bastion
 RequireHost = true
+Origins = https://${FQDN}
 
 [Negotiate]
 action = none
