terraform-system-vyos: update bin deploy process, separate process

--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -7,7 +7,7 @@
 
 Host vyos
     HostName 192.168.255.1
-    User vagrant
+    User vyos
     Port 22
     UserKnownHostsFile /dev/null
     StrictHostKeyChecking no
