--- a/TerraformWorkShop/System/VyOS/traefik/traefik.service
+++ b/TerraformWorkShop/System/VyOS/traefik/traefik.service
@@ -2,14 +2,24 @@
 # See https://doc.traefik.io/traefik-enterprise/installing/on-premise/#systemd-linux-only
 
 [Unit]
-Description=Traefik
-After=network-online.target
-Wants=network-online.target systemd-networkd-wait-online.service
+Description="Traefik Proxy"
+Documentation=https://docs.traefik.io
+Requires=step-ca.service
+After=network-online.target step-ca.service
+AssertFileIsExecutable=/usr/bin/traefik
 
 [Service]
 User=${user}
 Group=${group}
+
+Environment=LEGO_CA_CERTIFICATES=${LEGO_CA_CERTIFICATES}
+
+# https://www.freedesktop.org/software/systemd/man/latest/systemd.service.html#Type=
+Type=notify
+AmbientCapabilities=CAP_NET_BIND_SERVICE
+# https://doc.traefik.io/traefik/getting-started/configuration-overview/#configuration-file
 ExecStart=/usr/bin/traefik
+
 PrivateTmp=true
 PrivateDevices=false
 ProtectHome=true
@@ -17,13 +27,8 @@ ProtectSystem=full
 PermissionsStartOnly=true
 NoNewPrivileges=true
 LimitNOFILE=32768
-AmbientCapabilities=CAP_NET_BIND_SERVICE
 Restart=always
 RestartSec=2
-{% if pillar['rivet']['deploy']['local']['restrict_service_resources'] %}
-Nice=10
-CPUAffinity=0
-{% endif %}
 
 [Install]
 WantedBy=multi-user.target
