terraform-system-traefik: remove traefik restart systemd resource, move access log to data dir

--- a/TerraformWorkShop/System/VyOS/traefik/traefik.yaml
+++ b/TerraformWorkShop/System/VyOS/traefik/traefik.yaml
@@ -73,4 +73,6 @@ log:
   ## Alternative logging levels are DEBUG, INFO, WARN, ERROR, FATAL, and PANIC.
   level: DEBUG
 ## ref: https://doc.traefik.io/traefik/observability/access-logs/
-# accessLog: {}
+accessLog:
+  filePath: ${access_log_path}
+  bufferingSize: 100
