terraform-system-vyos: update config

--- a/TerraformWorkShop/System/VyOS/step-ca/step-ca.env
+++ b/TerraformWorkShop/System/VyOS/step-ca/step-ca.env
@@ -2,6 +2,7 @@
 # https://github.com/smallstep/certificates/blob/master/docker/entrypoint.sh
 STEPPATH=${STEPPATH}
 PWDPATH="${STEPPATH}/${PWD_SUBPATH}"
+DOCKER_STEPCA_INIT_ADDRESS="${INIT_ADDRESS}"
 DOCKER_STEPCA_INIT_NAME="${INIT_NAME}"
 DOCKER_STEPCA_INIT_ACME="${INIT_ACME}"
 DOCKER_STEPCA_INIT_DNS_NAMES="${INIT_DNS_NAMES}"
