--- a/TerraformWorkShop/System/VyOS/minio/minio.conf
+++ b/TerraformWorkShop/System/VyOS/minio/minio.conf
@@ -1,5 +1,7 @@
 # https://min.io/docs/minio/linux/reference/minio-server/minio-server.html#minio.server.DIRECTORIES
-MINIO_OPTS='--console-address "192.168.255.2:9001"'
-MINIO_VOLUMES="/mnt/data/minio"
+MINIO_OPTS='${MINIO_OPTS}'
+MINIO_VOLUMES=${MINIO_VOLUMES}
 # https://min.io/docs/minio/linux/reference/minio-server/settings/console.html#server-url
-MINIO_SERVER_URL="http://192.168.255.2:9000"
+MINIO_SERVER_URL=${MINIO_SERVER_URL}
+# https://min.io/docs/minio/linux/integrations/setup-nginx-proxy-with-minio.html
+MINIO_BROWSER_REDIRECT_URL=${MINIO_BROWSER_REDIRECT_URL}
