--- a/TerraformWorkShop/System/VyOS/minio/minio.service
+++ b/TerraformWorkShop/System/VyOS/minio/minio.service
@@ -8,8 +8,8 @@ AssertFileIsExecutable=/usr/local/bin/minio
 [Service]
 WorkingDirectory=/usr/local
 
-User=vyos
-Group=users
+User=${user}
+Group=${group}
 # ProtectProc=invisible
 
 EnvironmentFile=-/etc/default/minio
