--- a/TerraformWorkShop/System/VyOS/consul/consul.service
+++ b/TerraformWorkShop/System/VyOS/consul/consul.service
@@ -11,6 +11,7 @@ EnvironmentFile=-/etc/consul.d/consul.env
 User=${user}
 Group=${group}
 TimeoutStartSec=infinity
+AmbientCapabilities=CAP_NET_BIND_SERVICE
 ExecStartPre=/usr/bin/sleep 5
 ExecStart=/usr/bin/consul agent -config-dir=/etc/consul.d/
 # ExecStartPost=
