--- a/KubeWorkShop/MinIO/aio-minio.yaml
+++ b/KubeWorkShop/MinIO/aio-minio.yaml
@@ -115,6 +115,9 @@ spec:
         - '--console-address'
         - ':9001'
         # https://min.io/docs/minio/linux/operations/network-encryption.html#enabling-tls
+        # https://github.com/minio/minio/issues/12992
+        # present CAs sub folder is a must when 
+        # hosting minio behind a reservers proxy with self sign cert
         - '--certs-dir'
         - '/mnt/certs'
         # https://min.io/docs/minio/linux/reference/minio-server/minio-server.html#minio.server.DIRECTORIES
