terraform-system-traefik: update https redirect config, update restart service process command

--- a/TerraformWorkShop/System/VyOS/traefik/traefik_restart.service
+++ b/TerraformWorkShop/System/VyOS/traefik/traefik_restart.service
@@ -9,7 +9,7 @@ AssertPathExists=${traefik_service_file}
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/systemctl restart traefik.service
+ExecStart=/usr/bin/systemctl reload-or-restart traefik.service
 
 [Install]
 WantedBy=multi-user.target
