--- a/TerraformWorkShop/System/VyOS/traefik/dyn-traefik_dashboard.yaml
+++ b/TerraformWorkShop/System/VyOS/traefik/dyn-traefik_dashboard.yaml
@@ -1,7 +1,7 @@
 # Dynamic Configuration
 http:
   routers:
-    dashboard:
+    dashboard-redirect:
       # rule: Host(`traefik.service.consul`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
       rule: Host(`${sub_domain}.${base_domain}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
       service: api@internal
@@ -10,13 +10,22 @@ http:
       # will terminate the TLS request
       entryPoints:
         - web
-        - websecure
       middlewares:
         - toHttps@file
         - userpass
+    dashboard:
+      # rule: Host(`traefik.service.consul`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
+      rule: Host(`${sub_domain}.${base_domain}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
+      service: api@internal
+      # https://www.teanote.pub/archives/247
+      # https://doc.traefik.io/traefik/routing/routers/#tls
+      # will terminate the TLS request
+      entryPoints:
+        - websecure
+      middlewares:
+        - userpass
       tls:
         certResolver: internal
-        # {}
   middlewares:
     userpass:
       basicAuth:
