terraform-system-stepca: add json config for tls duration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,8 @@
       "editor.codeActionsOnSave": {
         "source.formatAll.terraform": "explicit"
       }
+    },
+    "[json]": {
+      "editor.defaultFormatter": "vscode.json-language-features"
     }
 }
